Fix pipeline box overflow with scroll
This change set back the possibility to have scroll on multi stage
pipeline. Moving the display to inline and the child in inline
block allow to have the padding

--- a/ui/src/main/js/view/templates/pipeline-staged.less
+++ b/ui/src/main/js/view/templates/pipeline-staged.less
@@ -23,6 +23,10 @@
 #pipeline-box {
   position: relative;
   box-sizing: border-box;
+  display: inline-block;
+  width: 100%;
+  padding: 15px 0;
+  overflow: auto;
 
   .extension-dock {
     font-size: 11px;
